--- a/client/index.html
+++ b/client/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
     <script type="text/javascript" src="https://livejs.com/live.js"></script>
     <script type="module" src="index.js" async></script>
 </head>
 <body>
-    <div id="menu"></div>
+    <div id="menu">
+        <div id="logo">PARLOT</div>
+        <div id="room-container"></div>
+    </div>
     <div id="frame">
         <div id="terminal"></div>
         <div id="input-container">
