Add join room button.
* Add modal class.
* Worker now load room from config file.

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="css/index.css">
+    <script type="text/javascript" src="https://kit.fontawesome.com/c1a16f97ec.js"></script>
     <script type="text/javascript" src="https://livejs.com/live.js"></script>
     <script type="module" src="index.js" async></script>
 </head>
@@ -14,6 +15,9 @@
     <div id="menu">
         <div id="logo">PARLOT</div>
         <div id="room-container"></div>
+        <div id="button-container">
+            <button id="join-room"><i class="fa-solid fa-plus"></i></button>
+        </div>
     </div>
     <div id="frame">
         <div id="terminal"></div>
