--- a/client/index.html
+++ b/client/index.html
@@ -14,9 +14,25 @@
 <body>
     <div id="menu">
         <div id="logo">PARLOT</div>
-        <div id="room-container"></div>
-        <div id="button-container">
-            <button id="join-room"><i class="fa-solid fa-plus"></i></button>
+        <div id="content">
+            <div id="room-container"></div>
+            <div id="button-container">
+                <button id="join-room" title="Join a room"><i class="fa-solid fa-plus"></i></button>
+            </div>
+        </div>
+        <div id="social">
+            <a href="https://github.com/werlang/parlot" target="_blank" title="GitHub Repository">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="/install/linux" target="_blank" title="Download Linux worker client">
+                <i class="fa-brands fa-linux"></i>
+            </a>
+            <a href="/install/windows" target="_blank" title="Download Windows worker client">
+                <i class="fa-brands fa-windows"></i>
+            </a>
+            <a href="/install/macos" target="_blank" title="Download MacOS worker client">
+                <i class="fa-brands fa-apple"></i>
+            </a>
         </div>
     </div>
     <div id="frame">
