--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,13 @@
         <div id="content">
             <div id="room-container"></div>
             <div id="button-container">
+                <div id="room-placeholder">
+                    <div class="room"><span class="name">Placeholder</span></div>
+                    <div class="worker"><span class="name">Foo-bar-lem</span></div>
+                    <div class="worker"><span class="name">Foo-bar</span></div>
+                    <div class="worker"><span class="name">Foo-bar-lorem</span></div>
+                    <div class="worker"><span class="name">Foo-lorem</span></div>
+                </div>
                 <button id="join-room" title="Join a room"><i class="fa-solid fa-plus"></i></button>
             </div>
         </div>
