--- a/client/index.html
+++ b/client/index.html
@@ -31,13 +31,13 @@
             <a href="https://github.com/werlang/parlot" target="_blank" title="GitHub Repository">
                 <i class="fa-brands fa-github"></i>
             </a>
-            <a href="/install/linux" target="_blank" title="Download Linux worker client">
+            <a href="/download/linux" target="_blank" title="Download Linux worker client">
                 <i class="fa-brands fa-linux"></i>
             </a>
-            <a href="/install/windows" target="_blank" title="Download Windows worker client">
+            <a href="/download/windows" target="_blank" title="Download Windows worker client">
                 <i class="fa-brands fa-windows"></i>
             </a>
-            <a href="/install/macos" target="_blank" title="Download MacOS worker client">
+            <a href="/download/macos" target="_blank" title="Download MacOS worker client">
                 <i class="fa-brands fa-apple"></i>
             </a>
         </div>
