Add local font-awesome.

--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,8 @@
     <title>Parlot</title>
 
     <link rel="stylesheet" href="css/index.css">
-    <script type="text/javascript" src="https://kit.fontawesome.com/c1a16f97ec.js"></script>
     <script type="text/javascript" src="https://livejs.com/live.js"></script>
-    <script type="module" src="index.js" async></script>
+    <script type="module" src="js/index.js" async></script>
 </head>
 <body>
     <div id="menu">
