Add support to join-leave room.
* Independent of having workers or not.
* Button to leave room.

--- a/client/index.html
+++ b/client/index.html
@@ -16,14 +16,16 @@
         <div id="content">
             <div id="room-container"></div>
             <div id="button-container">
-                <div id="room-placeholder">
+                <!-- <div id="room-placeholder">
                     <div class="room"><span class="name">Placeholder</span></div>
                     <div class="worker"><span class="name">Foo-bar-lem</span></div>
                     <div class="worker"><span class="name">Foo-bar</span></div>
                     <div class="worker"><span class="name">Foo-bar-lorem</span></div>
                     <div class="worker"><span class="name">Foo-lorem</span></div>
-                </div>
+                </div> -->
                 <button id="join-room" title="Join a room"><i class="fa-solid fa-plus"></i></button>
+                <button id="leave-room" title="Leave the room" disabled><i class="fa-solid fa-minus"></i></button>
+                <button id="queue-toggle" title="" disabled><i class="fa-solid fa-layer-group"></i></button>
             </div>
         </div>
         <div id="social">
