Continue to improve frontend.

--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
                 </div> -->
                 <button id="join-room" title="Join a room"><i class="fa-solid fa-plus"></i></button>
                 <button id="leave-room" title="Leave the room" disabled><i class="fa-solid fa-minus"></i></button>
-                <button id="queue-toggle" title="" disabled><i class="fa-solid fa-layer-group"></i></button>
+                <button id="queue-toggle" title="Add queued commands" disabled><i class="fa-solid fa-layer-group"></i></button>
             </div>
         </div>
         <div id="social">
